# akousteon

./: Cargo.toml  README.md  akousteon-88995bd16c3aeef3.js  akousteon-88995bd16c3aeef3_bg.wasm  index.html  sw.js
.github/workflows/: pages.yml
locales/: translation.json
src/: app.rs  components.rs  main.rs  serde.rs  tests.rs
